# poetry-to-uv-migrator

./: .gitignore  LICENSE  README.md  convert_version_test.py  get_uv_dependencies_test.py  migrate_poetry_to_uv.py  pyproject.toml  test_main.py  test_project_data.py
tests/: convert_author_test.py  convert_tool_uv_test.py  convert_uv_dependencies_test.py  convert_uv_project_section_test.py  convert_version_test.py  get_tool_uv_test.py  get_uv_project_section_test.py  parse_author_test.py  sample_poetry_pyproject.toml
